// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Customer: Table for storing customer information including their details.
Item: items within an order, linking products and orders.
Order: Table for storing order information including referencing customers and containing notes.
Product: products available in the store.
'''
}

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    phone VARCHAR 
    created_date DATETIME 
    address VARCHAR 
    balance INTEGER 
    credit_limit INTEGER 
    }

Table Item {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    price INTEGER 
    amount INTEGER 
    unit_price INTEGER 
    }

Table Order {
    id INTEGER [primary key]
    order_date DATETIME 
    customer_id INTEGER 
    notes VARCHAR 
    amount_total INTEGER 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    price INTEGER 
    stock_quantity INTEGER 
    }



// Relationships
    Ref: Item.(order_id) < Order.(id)
    Ref: Item.(product_id) < Product.(id)
    Ref: Order.(customer_id) < Customer.(id)
